randomised universe function added

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </div>
     <br>
     <div id="buttons">
+        <button onclick="createRandomUniverse()">SEED!</button>
         <button onclick="init()">Clear</button>
         <button onclick="ageAndDraw()">Step</button>
         <button onclick="animateCanvas()">Play</button>
