--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>GOL Gerodes</title>
     <link rel="stylesheet" href="style.css">
     <script src="Universe.js"></script>
 </head>
