--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GOL Gerodes</title>
+    <title>IO Gerodes</title>
 </head>
 <body>
     <div id="buttons">
