Add second link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div id="buttons">
         <a href="https://cdn.rawgit.com/sgerodes/game-of-life-js/master/index.html" title="About Me">Game of Life</a>
-        <a href=https://cdn.rawgit.com/sgerodes/magnetic_circles.github.io/master/index.html" title="Abou">Magic Circles</a>
+        <a href="https://cdn.rawgit.com/sgerodes/magnetic_circles.github.io/master/index.html" title="Abou">Magic Circles</a>
     </div>
 </body>
 </html>
