add codewars progress

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>IO Gerodes</title>
+    <title>Web Projects Gerodes</title>
 </head>
 <body>
     <div id="buttons">
-        <a href="https://cdn.rawgit.com/sgerodes/game-of-life-js/master/index.html" title="About Me">Game of Life</a>
-        <a href="https://cdn.rawgit.com/sgerodes/magnetic_circles.github.io/master/index.html" title="Abou">Magic Circles</a>
+        <h4>My Web Projects</h4>
+        <input type="button" onclick="location.href='https://cdn.rawgit.com/sgerodes/magnetic_circles.github.io/master/index.html';" value="Magic Circles" />
+        <br><br>
+        <input type="button" onclick="location.href='https://cdn.rawgit.com/sgerodes/game-of-life-js/master/index.html';" value="Game of Life" />
+    </div>
+    <div>
+        <h4>My Codewars progress</h4>
+        <img src="https://www.codewars.com/users/sgerodes/badges/small">
     </div>
 </body>
 </html>
