--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <input type="button" onclick="location.href='https://cdn.rawgit.com/sgerodes/magnetic_circles.github.io/master/index.html';" value="Magic Circles" />
         <br><br>
         <input type="button" onclick="location.href='https://cdn.rawgit.com/sgerodes/game-of-life-js/master/index.html';" value="Game of Life" />
+        <br><br>
+        <input type="button" onclick="location.href='https://cdn.rawgit.com/sgerodes/snake/master/index.html';" value="Snake" />
     </div>
     <div>
         <h4>My Codewars progress</h4>
