Change the link to game of life

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div id="buttons">
         <h4>My Web Projects</h4>
         <input type="button" onclick="location.href='https://cdn.rawgit.com/sgerodes/magnetic_circles.github.io/master/index.html';" value="Magic Circles" />
+        <input type="button" onclick="location.href='https://raw.githubusercontent.com/sgerodes/game-of-life-js/master/index.html';" value="Magic Circles" />
         <br><br>
         <input type="button" onclick="location.href='https://cdn.rawgit.com/sgerodes/game-of-life-js/master/index.html';" value="Game of Life" />
         <br><br>
