--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 <body>
     <div id="buttons">
         <h4>My Web Projects</h4>
-        <input type="button" onclick="location.href='https://cdn.rawgit.com/sgerodes/magnetic_circles.github.io/master/index.html';" value="Magic Circles" />
+        <input type="button" onclick="location.href='location.href='http://htmlpreview.github.com/?https://github.com/sgerodes/magnetic_circles.github.io/blob/master/index.html';" value="Magic Circles" />
 
         <br><br>
-        <input type="button" onclick="location.href='https://cdn.rawgit.com/sgerodes/game-of-life-js/master/index.html';" value="Game of Life" />
-        <input type="button" onclick="location.href='http://htmlpreview.github.com/?https://github.com/sgerodes/game-of-life-js/blob/master/index.html';" value="Magic Circles" />
+        <input type="button" onclick="location.href='http://htmlpreview.github.com/?https://github.com/sgerodes/game-of-life-js/blob/master/index.html';" value="Game of Life" />
         <br><br>
-        <input type="button" onclick="location.href='https://cdn.rawgit.com/sgerodes/snake/master/src/index.html';" value="Snake" />
+        <input type="button" onclick="location.href='http://htmlpreview.github.com/?https://github.com/sgerodes/Snake/blob/master/src/index.html';" value="Snake" />
     </div>
     <div>
         <h4>My Codewars progress</h4>
