--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body>
     <div id="buttons">
         <h4>My Web Projects</h4>
-        <input type="button" onclick="location.href='location.href='http://htmlpreview.github.com/?https://github.com/sgerodes/magnetic_circles.github.io/blob/master/index.html';" value="Magic Circles" />
-
+        <input type="button" onclick="location.href='location.href='http://htmlpreview.github.com/?https://github.com/sgerodes/magnetic_circles.github.io/index.html';" value="Magic Circles" />
         <br><br>
         <input type="button" onclick="location.href='http://htmlpreview.github.com/?https://github.com/sgerodes/game-of-life-js/blob/master/index.html';" value="Game of Life" />
         <br><br>
