add Git Hub links

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <div id="buttons">
         <h4>My Web Projects</h4>
         <input type="button" onclick="location.href='https://htmlpreview.github.io/?https://github.com/sgerodes/magnetic_circles.github.io/blob/master/index.html';" value="Magic Circles" />
-        <input type="button" onclick="location.href='https://github.com/sgerodes/game-of-life-js';" value="Git Hub" />
+        <input type="button" onclick="location.href='https://github.com/sgerodes/magnetic_circles.github.io';" value="Git Hub" />
         <br><br>
         <input type="button" onclick="location.href='http://htmlpreview.github.com/?https://github.com/sgerodes/game-of-life-js/blob/master/index.html';" value="Game of Life" />
+        <input type="button" onclick="location.href='https://github.com/sgerodes/game-of-life-js';" value="Git Hub" />
         <br><br>
         <input type="button" onclick="location.href='http://htmlpreview.github.com/?https://github.com/sgerodes/Snake/blob/master/src/index.html';" value="Snake" />
+        <input type="button" onclick="location.href='https://github.com/sgerodes/Snake';" value="Git Hub" />
     </div>
     <div>
         <h4>My Codewars progress</h4>
